<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smithjterm.storycrafter.NodeClicked">

    <LinearLayout
        android:layout_width="327dp"
        android:layout_height="440dp"
        android:layout_margin="30dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|fill_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="title"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="16dp" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="49dp" />

        <TextView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="body"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="112dp" />

        <EditText
            android:id="@+id/editBody"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/body"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="150dp" />

        <TextView
            android:id="@+id/choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1st choice"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="213dp" />

        <EditText
            android:id="@+id/editChoice1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/choice1"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="247dp" />

        <TextView
            android:id="@+id/choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2nd choice"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="307dp" />

        <EditText
            android:id="@+id/editChoice2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/choice2"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="343dp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="saveEntryActivity"
        android:text="@string/save_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="139dp" />
</android.support.constraint.ConstraintLayout>
